limpieza de codigo

--- a/locales/en.json
+++ b/locales/en.json
@@ -5,5 +5,12 @@
 	"Price": "Price",
 	"Sale/Buy": "Sale/Buy",
 	"Tags": "Tags",
-	"Image": "Image"
+	"Image": "Image",
+	"Full list": "Full list",
+	"Ordered list": "Ordered list",
+	"Mobile": "Mobile",
+	"Lifestyle": "Lifestyle",
+	"Motor": "Motor",
+	"Work": "Work",
+	"Examples": "Examples"
 }
