--- a/locales/es.json
+++ b/locales/es.json
@@ -5,5 +5,12 @@
 	"Price": "Precio",
 	"Sale/Buy": "Venta/Compra",
 	"Tags": "Categorías",
-	"Image": "Imágenes"
+	"Image": "Imágenes",
+	"Full list": "Lista completa",
+	"Ordered list": "Lista ordenada",
+	"Mobile": "Móviles",
+	"Lifestyle": "Estilo de vida",
+	"Motor": "Vehículos",
+	"Work": "Trabajo",
+	"Examples": "Ejemplos"
 }
