--- a/locales/fr.json
+++ b/locales/fr.json
@@ -5,5 +5,12 @@
 	"Price": "Prix",
 	"Sale/Buy": "Vent/Achat",
 	"Tags": "Catégorie",
-	"Image": "Image"
+	"Image": "Image",
+	"Full list": "List complète",
+	"Ordered list": "List ordonnée",
+	"Mobile": "Portables",
+	"Lifestyle": "Style de vie",
+	"Motor": "Moteur",
+	"Work": "Travail",
+	"Examples": "Examples"
 }
