arreglo de cierre de conexion

--- a/locales/en.json
+++ b/locales/en.json
@@ -12,5 +12,6 @@
 	"Lifestyle": "Lifestyle",
 	"Motor": "Motor",
 	"Work": "Work",
-	"Examples": "Examples"
+	"Examples": "Examples",
+	"Sale /Buy": "Sale /Buy"
 }
