--- a/locales/es.json
+++ b/locales/es.json
@@ -12,5 +12,6 @@
 	"Lifestyle": "Estilo de vida",
 	"Motor": "Vehículos",
 	"Work": "Trabajo",
-	"Examples": "Ejemplos"
+	"Examples": "Ejemplos",
+	"Sale /Buy": "Sale /Buy"
 }
