--- a/locales/fr.json
+++ b/locales/fr.json
@@ -12,5 +12,6 @@
 	"Lifestyle": "Style de vie",
 	"Motor": "Moteur",
 	"Work": "Travail",
-	"Examples": "Examples"
+	"Examples": "Examples",
+	"Sale /Buy": "Sale /Buy"
 }
